# oil-impact

./: .dvcignore.dvc  .gitignore  README.md.dvc  pyproject.toml
data/processed/country/countries_list/: oil_states.csv  oil_states_v1.csv  world_countries_list.csv
data/processed/country/country_code/: code.csv  country_code.csv
data/processed/gdp/oil_states/: .gitignore  oil_producer_gdp.csv.dvc
data/processed/gdp/world/: .gitignore  gdp_world_2000_to_2002.csv.dvc  gdp_world_cleaned_v1.csv.dvc  gdp_world_final_insight_03.csv.dvc
data/processed/oil_price/: .gitignore  avg_oil_price.csv.dvc  oil-price-per-barrel.csv.dvc
data/raw/: .gitignore  world-gdp.dvc
data/raw/countries/: .gitignore  country.json.dvc  oil-producing-countries.csv.dvc
data/raw/oil-prices/: .gitignore  crude-oil-price.csv.dvc  oil-price-per-barrel.csv.dvc
documentation/data-cleaning/: .gitignore  1-data-init-status.md.dvc
notebook/01_load/: 01_data-loading.ipynb  load.ipynb
notebook/02_clean/: 01_clean_world_gdp_insight_01.ipynb  02_clean_oil_state_insight_01.ipynb  03_clean_oil_price_insight_02.ipynb  04_clean_country_list_insight_03.ipynb
notebook/03_prepare/: 01_prepare_world_gdp_insight_01.ipynb  02_prepare_oil_vs_non_oil_gdp.ipynb
notebook/04_analyze/: 01_analyze_insight_01.ipynb  02_analyze_oil_price_vs_gdp_insight_02.ipynb  03_analyze_oil_vs_non_oil_gdp_insight_03.ipynb
oil_impact/: utils.py
references/: dataref.md
src/: clean.py.dvc  load.py  prepare.py
