[tool.poetry]
name = "oil-impact"
version = "0.1.0"
description = ""
authors = ["Ridwan Amzat <amzatr886@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
dvc = {extras = ["gdrive"], version = "^3.28.0"}
tex = "^1.8"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
pycountry = "^22.3.5"
pycountry-convert = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
